--- a/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
+++ b/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="924805324"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="215313039"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="22420130">
@@ -85,7 +84,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{260, 160}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="36105668"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<float key="IBUIAlpha">0.80000001192092896</float>
@@ -101,7 +99,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{115, 26}, {125, 24}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="44124433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -131,9 +128,9 @@
 							<object class="IBUILabel" id="273470397">
 								<reference key="NSNextResponder" ref="215313039"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{115, 119}, {100, 21}}</string>
+								<string key="NSFrame">{{151, 88}, {89, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="472840128"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -148,6 +145,7 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="866882205">
 									<int key="type">1</int>
 									<double key="pointSize">13</double>
@@ -164,7 +162,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{140, 57}, {74, 23}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="448182002"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -175,7 +172,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{20, 114}, {75, 28}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="501469967"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -185,23 +181,37 @@
 								<reference key="IBUIHighlightedTitleColor" ref="43090393"/>
 								<reference key="IBUINormalTitleColor" ref="22420130"/>
 								<reference key="IBUINormalTitleShadowColor" ref="1060230948"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="380254803">
 									<int key="type">2</int>
 									<double key="pointSize">11</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="1058410651">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">11</double>
 									<int key="NSfFlags">16</int>
 								</object>
+							</object>
+							<object class="IBUIButton" id="864860633">
+								<reference key="NSNextResponder" ref="215313039"/>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{165, 114}, {75, 28}}</string>
+								<reference key="NSSuperview" ref="215313039"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="43090393"/>
+								<reference key="IBUINormalTitleColor" ref="22420130"/>
+								<reference key="IBUINormalTitleShadowColor" ref="1060230948"/>
+								<reference key="IBUIFontDescription" ref="380254803"/>
+								<reference key="IBUIFont" ref="1058410651"/>
 							</object>
 							<object class="IBUILabel" id="501469967">
 								<reference key="NSNextResponder" ref="215313039"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{20, 114}, {75, 28}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="273470397"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -226,17 +236,16 @@
 							<object class="IBUILabel" id="448182002">
 								<reference key="NSNextResponder" ref="215313039"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{115, 90}, {56, 21}}</string>
+								<string key="NSFrame">{{115, 88}, {34, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="472840128"/>
+								<reference key="NSNextKeyView" ref="273470397"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
+								<string key="IBUIText">LV.99</string>
 								<reference key="IBUITextColor" ref="573501403"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
@@ -250,7 +259,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{20, 26}, {75, 75}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="821928283"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -267,7 +275,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{115, 58}, {16, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="209270839"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -276,7 +283,6 @@
 						</array>
 						<string key="NSFrame">{{30, 141}, {260, 160}}</string>
 						<reference key="NSSuperview" ref="924805324"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="695897427"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="779680298">
@@ -288,7 +294,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="876898479"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="779680298"/>
@@ -386,6 +391,14 @@
 					<int key="connectionID">57</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">chatButton</string>
+						<reference key="source" ref="924805324"/>
+						<reference key="destination" ref="864860633"/>
+					</object>
+					<int key="connectionID">60</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickMask:</string>
 						<reference key="source" ref="876898479"/>
@@ -402,6 +415,15 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">53</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">talkToHim:</string>
+						<reference key="source" ref="864860633"/>
+						<reference key="destination" ref="924805324"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">61</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -446,10 +468,11 @@
 							<reference ref="472840128"/>
 							<reference ref="501469967"/>
 							<reference ref="821928283"/>
-							<reference ref="273470397"/>
 							<reference ref="448182002"/>
 							<reference ref="44124433"/>
 							<reference ref="209270839"/>
+							<reference ref="273470397"/>
+							<reference ref="864860633"/>
 						</array>
 						<reference key="parent" ref="924805324"/>
 					</object>
@@ -498,6 +521,11 @@
 						<reference key="object" ref="44124433"/>
 						<reference key="parent" ref="215313039"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">58</int>
+						<reference key="object" ref="864860633"/>
+						<reference key="parent" ref="215313039"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -516,6 +544,8 @@
 				<string key="54.CustomClassName">DiceAvatarView</string>
 				<string key="54.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="58.CustomClassName">FontButton</string>
+				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.CustomClassName">HKGirlFontLabel</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.CustomClassName">HKGirlFontLabel</string>
@@ -528,138 +558,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">57</int>
+			<int key="maxID">61</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceAvatarView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceAvatarView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceUserInfoView</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="avatar">DiceAvatarView</string>
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="followUserButton">FontButton</string>
-						<string key="genderImageView">UIImageView</string>
-						<string key="genderLabel">UILabel</string>
-						<string key="levelLabel">UILabel</string>
-						<string key="locationLabel">UILabel</string>
-						<string key="mask">UIButton</string>
-						<string key="snsTagImageView">UIImageView</string>
-						<string key="statusLabel">UILabel</string>
-						<string key="userName">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="avatar">
-							<string key="name">avatar</string>
-							<string key="candidateClassName">DiceAvatarView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="followUserButton">
-							<string key="name">followUserButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="genderImageView">
-							<string key="name">genderImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="genderLabel">
-							<string key="name">genderLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="levelLabel">
-							<string key="name">levelLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="locationLabel">
-							<string key="name">locationLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mask">
-							<string key="name">mask</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="snsTagImageView">
-							<string key="name">snsTagImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statusLabel">
-							<string key="name">statusLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userName">
-							<string key="name">userName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceUserInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
